# synthizer_bindings

./: .gitmodules  Cargo.toml  build.rs
src/: lib.rs  synthizer_bindings.rs
