[package]
name = "synthizer_bindings"
version = "0.1.0"
authors = ["Keith <keithwipf1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[build-dependencies]
cc = { version = "1.0.66", features = ["parallel"] }
walkdir = "2.3.1"
